--- a/views/user/dash/profile.ejs
+++ b/views/user/dash/profile.ejs
@@ -131,7 +131,7 @@
                 <input id="_id" type="hidden" class="form-control" name="id" value="" required>
 
                 <div class="mb-3">
-                    <label class="mb-2 text-muted" for="name">Name</label>
+                    <label class="mb-2 " for="name">Name</label>
                     <input id="name" type="text" class="form-control" name="name" value="" required autofocus>
                     <div class="invalid-feedback">
                         Name is required	
@@ -139,14 +139,14 @@
                 </div>
 
                 <div class="mb-3">
-                    <label class="mb-2 text-muted" for="house">house</label>
+                    <label class="mb-2 " for="house">house</label>
                     <input id="house" type="text" class="form-control" name="house" value="" required>
                     <div class="invalid-feedback">
                         house is required
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="mb-2 text-muted" for="post">post</label>
+                    <label class="mb-2 " for="post">post</label>
                     <input id="post" type="text" class="form-control" name="post" value="" required>
                     <div class="invalid-feedback">
                         post is required
@@ -154,28 +154,28 @@
                 </div>
 
                 <div class="mb-3">
-                    <label class="mb-2 text-muted" for="city">city</label>
+                    <label class="mb-2 " for="city">city</label>
                     <input id="city" type="text" class="form-control" name="city" required>
                     <div class="invalid-feedback">
                         city is required
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="mb-2 text-muted" for="district">district</label>
+                    <label class="mb-2 " for="district">district</label>
                     <input id="district" type="text" class="form-control" name="district" required>
                     <div class="invalid-feedback">
                         district is required
                     </div>
                 </div>
                 <div class="mb-3"> 
-                    <label class="mb-2 text-muted" for="state">state</label>
+                    <label class="mb-2 " for="state">state</label>
                     <input id="state" type="text" class="form-control" name="state" required>
                     <div class="invalid-feedback">
                         state is required
                     </div>
                 </div>
                 <div class="mb-3">
-                    <label class="mb-2 text-muted" for="pin">pin</label>
+                    <label class="mb-2 " for="pin">pin</label>
                     <input id="pin" type="number" class="form-control" name="pin" required>
                     <div class="invalid-feedback">
                         pin is required
