--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -103,26 +103,12 @@
                 <p class="text-center"><a class="btn btn-dark" href="/shop/?cat=<%= val._id%>">Go Shop</a></p>
             </div>
             <%}) %> 
+<!--             
             <div class="col-12 col-md-3 p-5 mt-3 " style="scroll-snap-align: start;">
                 <a href="#" class="d-block rounded-circle w-100" style="overflow: hidden;"><img src="./assets/img/category_img_02.jpg" class="rounded-circle img-fluid border hoverZoom"></a>
                 <h2 class="h5 text-center mt-3 mb-3">Shoes</h2>
                 <p class="text-center"><a class="btn btn-dark">Go Shop</a></p>
-            </div>
-            <div class="col-12 col-md-3 p-5 mt-3 " style="scroll-snap-align: start;">
-                <a href="#" class="d-block rounded-circle w-100" style="overflow: hidden;"><img src="./assets/img/category_img_03.jpg" class="rounded-circle img-fluid border hoverZoom"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Accessories</h2>
-                <p class="text-center"><a class="btn btn-dark">Go Shop</a></p>
-            </div>
-            <div class="col-12 col-md-3 p-5 mt-3 " style="scroll-snap-align: start;">
-                <a href="#" class="d-block rounded-circle w-100" style="overflow: hidden;"><img src="./assets/img/category_img_02.jpg" class="rounded-circle img-fluid border hoverZoom"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Shoes</h2>
-                <p class="text-center"><a class="btn btn-dark">Go Shop</a></p>
-            </div>
-            <div class="col-12 col-md-3 p-5 mt-3 " style="scroll-snap-align: start;">
-                <a href="#" class="d-block rounded-circle w-100" style="overflow: hidden;"><img src="./assets/img/category_img_02.jpg" class="rounded-circle img-fluid border hoverZoom"></a>
-                <h2 class="h5 text-center mt-3 mb-3">Shoes</h2>
-                <p class="text-center"><a class="btn btn-dark">Go Shop</a></p>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- End Categories of The Month -->
