soft delete enabled for users and started to working on sales report

--- a/views/layout/admin-layout.ejs
+++ b/views/layout/admin-layout.ejs
@@ -68,6 +68,12 @@
             Coupons
           </a>
         </li>
+        <li>
+          <a href="/admin/report/" class="nav-link <% if (page=='report'){ %> active <% }else{ %>text-white <% } %>">
+            <i class="bi bi-bar-chart-line-fill px-1"  style="font-size: 18px;"></i>
+            Report
+          </a>
+        </li>
         <li >
           <a class="nav-link d-flex align-items-center justify-content-between collapsed text-white" href="#" data-bs-toggle="collapse" data-bs-target="#settings-collapse" aria-expanded="false" >
             <div>
