completed sales report

--- a/views/admin/report-ask.ejs
+++ b/views/admin/report-ask.ejs
@@ -29,7 +29,7 @@
                         Date (from - to)
                     </label>
                     <div class="input-group mb-3">
-                      <input type="datetime-local" class="form-control" name="Date" placeholder="Date" aria-label="Date" id="fromDate" onchange="changeAction()">
+                      <input type="datetime-local" class="form-control" name="fromDate" placeholder="Date" aria-label="Date" id="fromDate" onchange="changeAction()">
                     </div>
                     <div class="input-group mb-3">
                       <input type="datetime-local" class="form-control" name="toDate" placeholder="toDate" aria-label="toDate" id="toDate" onchange="changeAction()">
