--- a/public/admin/style/main.css
+++ b/public/admin/style/main.css
@@ -1,3 +1,29 @@
+
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 0px; /*x scroll d-none */
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
+
+  
+
+
 html {
     font-size: 14px;
   }
