--- a/views/admin/report-sales.ejs
+++ b/views/admin/report-sales.ejs
@@ -1,3 +1,19 @@
+<style>
+@media print {
+  body * {
+    visibility: hidden;
+  }
+  #section-to-print, #section-to-print * {
+    visibility: visible;
+  }
+  #section-to-print {
+    position: absolute;
+    left: 0;
+    top: 0;
+  }
+}
+</style>
+
 <div id="adminRes" style="position: fixed; top: 0; left: 0; right: 0; z-index: 9;"></div>
 
 <div class="container bg-white my-2">
@@ -6,8 +22,12 @@
         <h2 class=" text-muted p-0">
             <i class="bi bi-bar-chart-line"></i> Sales Report
         </h2>
+        <a class="btn btn-dark btn-sm"  style="height: 30px;" href="#" onclick="window.print()">
+          <i class="bi bi-printer"></i>
+            Print
+        </a>
     </div>
-    <div class="ad-responsive-table w-100">
+    <div class="ad-responsive-table w-100" id="section-to-print">
       <table id="myTable" class="table table-striped table-bordered table-responsive table-hover ">
           <thead>
               <tr>
@@ -23,7 +43,23 @@
           </thead>
           <tbody>
 
-              <% salesData.forEach((val,ind)=>{ %>
+              <% let finalTotal = 0;
+               salesData.forEach((val,ind)=>{ 
+                let discount = 0;
+                let total = 0;
+                if(val.coupen.discount>0){
+                  if(val.coupen.ptype =='inr'){
+                     discount = '&#8377;'+val.coupen.discount
+                     total = Math.round(val.bill_amount-val.coupen.discount)
+                  }else if(val.coupen.ptype =='percnt'){
+                     discount = '&percnt;'+val.coupen.discount
+                     total = Math.round((val.bill_amount*val.coupen.discount)/100)
+                  }
+                }else{
+                    total = val.bill_amount;
+                }
+                finalTotal+=total
+                %>
 
 
               
@@ -31,16 +67,28 @@
                   <td><%= ind+1 %></td>
                   <td><%= val.ordered_date.getDate() %>/<%= val.ordered_date.getMonth()+1 %>/<%= val.ordered_date.getFullYear() %></td>
                   <td class="small"><%=val._id%></td>
-                  <td >@<%=val.userid.username%></td>
+                  <td >@<%=val.userid[0].username%></td>
                   <td ><%=val.products.length%></td>
-                  <td ><%=val.bill_amount%></td>
-                  <td><%=val.coupen.discount%></td>
+                  <td >&#8377;<%=val.bill_amount%></td>
+                  <td><%-discount%></td>
                   <td>
-                    <%=val.bill_amount%> 
+                    &#8377;<%-total%> 
                   </td>
               </tr>
-
-              <%})%>
+              
+              <% })%>
+              <tr>
+                  <td> </td>
+                  <td> </td>
+                  <td ></td>
+                  <td ></td>
+                  <td ></td>
+                  <td ></td>
+                  <td>TOTAL : </td>
+                  <td class="fw-bold">
+                    &#8377;<%-finalTotal%> 
+                  </td>
+              </tr>
           </tbody>
       </table>
     </div>
